force-app/main/default/objects/Lead_routing__mdt/Lead_routing__mdt.object-meta.xml
<CustomObject>
    <label>Lead Routing Rule</label>
    <pluralLabel>Lead Routing Rules</pluralLabel>
</CustomObject>