force-app/main/default/objects/Lead_routing__mdt/fields/Community__c.field-meta.xml
<CustomField>
    <fullName>Community__c</fullName>
    <label>Community</label>
    <length>80</length>
    <type>Text</type>
</CustomField>