force-app/main/default/objects/Lead_routing__mdt/fields/Sub_Community__c.field-meta.xml
<CustomField>
    <fullName>Sub_Community__c</fullName>
    <label>Sub Community</label>
    <length>80</length>
    <type>Text</type>
</CustomField>